# macaw-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  main.mm
src/Common/: AAPLVertex.hpp  Constants.hpp  Textures.hpp  Uniforms.hpp  Vertex.hpp
src/Core/: Engine.hpp  EngineContext.hpp  Exceptions.hpp  ImmutableConfig.hpp  MutableConfig.hpp  Window.hpp
src/Core/Private/: Engine.mm  EngineContext.mm  Window.mm
src/Render/: Camera.hpp  EnvironmentProbe.hpp  MetalContext.hpp  Texture.hpp  TextureManager.hpp
src/Render/Model/: AABBox.hpp  Material.hpp  Mesh.hpp  Node.hpp  Primitive.hpp  Scene.hpp
src/Render/Model/Private/: AABBox.mm  Material.mm  Mesh.mm  Node.mm  Scene.mm
src/Render/Private/: Camera.mm  EnvironmentProbe.mm  MetalContext.mm  Texture.mm  TextureManager.mm
src/Shaders/: Basic.metal  Skybox.metal
src/Utils/: Logger.hpp
src/Utils/Private/: Logger.cpp
